# CUDA-CL-N-Body-Problem

./: Makefile  README.md  aloo  testcl.csv
experiment/: exp.ipynb  expCL.ipynb  expCPU.ipynb  expCUDA.ipynb  kernel.cl  kernel_bidimensional.cl  kernel_wth_local_mem.cl  nbody_bidimensional_cl.csv  nbody_bidimensional_cuda.csv  nbody_local_mem_cl.csv  nbody_local_mem_cuda.csv  nbody_naive_cl.csv  nbody_naive_cpu.csv  nbody_naive_cuda.csv  nbody_not32_cl.csv  nbody_variation_cl.csv  nbody_variation_cuda.csv
src/: CMakeLists.txt  kernel.cpp  kernel.h  main.cpp
src/cl/: CMakeLists.txt  auxilliary.cpp  auxilliary.h  kernel.cl  kernel_bidimensional.cl  kernel_wth_local_mem.cl  main.cpp
src/cuda/: kernel.cu  kernel.cuh  main.cu
